--- a/style.css
+++ b/style.css
@@ -1,125 +1,145 @@
-
-
-body {
-  background: linear-gradient(to bottom, #7289da, #4b4b4b);
-}
-  
-  #board:hover td{
-    background-color: #fa6a60; /* beige */
-    transition: background-color 0.5s ease;
-  }
-  table {
-    border-collapse: collapse;
-    margin: 0 auto;
-    background-color: #92e96f; /* light blue */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    font-family: sans-serif;
 }
 
-td {
-    width: 200px;
-    height: 180px;
+body{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000;
+}
+
+.container{
+    width: 400px;
+    height: min-content;
+    background-color: #fff;
+    border-radius: 12px;
+    padding: 28px;
+}
+
+.search-box{
+    width: 100%;
+    height: min-content;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search-box input{
+    width: 84%;
+    font-size: 20px;
+    text-transform: capitalize;
+    color: #000;
+    background-color: #e6f5fb;
+    padding: 12px 16px;
+    border-radius: 14px;
+}
+
+.search-box input::placeholder{
+    color: #000;
+}
+
+.search-box button{
+    width: 46px;
+    height: 46px;
+    background-color: #e6f5fb;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.search-box button:hover{
+    color: #fff;
+    background-color: #ababab;
+}
+
+.weather-body{
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-block: 20px;
+    display: none;
+}
+.weather-body img{
+    width: 60%;
+}
+
+.weather-box{
+    margin-block: 20px;
     text-align: center;
-    vertical-align: middle;
-    font-size: 100px;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
-    border: 1px solid #000000; /*black*/
 }
 
-#reset-button {
-  position: absolute;
-  bottom: 0%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 20px;
-  padding: 10px 20px;
-  background-color: #ADD8E6;
-  color: #000000;
-  border: 2px solid #000000;
-  border-radius: 10px;
-  transition: all 0.5s ease;
+.weather-box .temperature{
+    font-size: 40px;
+    font-weight: 800;
+    position: relative;
 }
 
-#reset-button:hover {
-  background-color: #F5F5DC;
-  border-color: #DC143C;
-  color: #DC143C;
-  transform: translate(-50%, -50%) scale(1.1);
-}
-#social-icons {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  display: flex;
-  align-items: center;
+.weather-box .temperature sup{
+    font-size: 20px;
+    position: absolute;
+    font-weight: 600;
 }
 
-#social-icons a {
-  margin-left: 10px;
-  font-size: 30px;
-  color: #000000;
-  text-decoration: none;
-  transition: color 0.5s ease;
+.weather-box .description{
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
 }
 
-#social-icons a:hover {
-  color: #ADD8E6;
-}
-td {
-  font-size: 100px;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
-  text-shadow: 0 0 10px #ADD8E6, 0 0 20px #ADD8E6, 0 0 30px #ADD8E6, 0 0 40px #DC143C, 0 0 70px #DC143C, 0 0 80px #DC143C, 0 0 100px #DC143C, 0 0 150px #DC143C;
-  animation: animateText 1s ease-in-out infinite;
+.weather-details{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
 }
 
-@keyframes animateText {
-  0% {
-      text-shadow: 0 0 10px #ADD8E6, 0 0 20px #ADD8E6, 0 0 30px #ADD8E6, 0 0 40px #DC143C, 0 0 70px #DC143C, 0 0 80px #DC143C, 0 0 100px #DC143C, 0 0 150px #DC143C;
-  }
-  20% {
-      text-shadow: 0 0 10px #DC143C, 0 0 20px #DC143C, 0 0 30px #DC143C, 0 0 40px #ADD8E6, 0 0 70px #ADD8E6, 0 0 80px #ADD8E6, 0 0 100px #ADD8E6, 0 0 150px #ADD8E6;
-  }
-  40% {
-      text-shadow: 0 0 10px #ADD8E6, 0 0 20px #ADD8E6, 0 0 30px #ADD8E6, 0 0 40px #DC143C, 0 0 70px #DC143C, 0 0 80px #DC143C, 0 0 100px #DC143C, 0 0 150px #DC143C;
-  }
-}
-#icons {
-  size: 50%;
-  position: absolute;
-  bottom: 5%;
-
-}
-.dropdown {
-  top: 1%;
-  position: absolute;
-  display: inline-block;
+.humidity, .wind{
+    display: flex;
+    align-items: center;
 }
 
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
+.humidity{
+    margin-left: 20px;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.wind{
+    margin-right: 20px;
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  position: relative;
+.weather-details i{
+    font-size: 36px;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.weather-details .text{
+    margin-left: 10px;
+    font-size: 16px;
+}
 
-.dropdown:hover .dropdown-content {display: block;}
+.text span{
+    font-size: 20px;
+    font-weight: 700;
+}
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.location-not-found{
+    margin-top: 20px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.location-not-found h1{
+    font-size: 20px;
+    color: #6b6b6b;
+    margin-block-end: 15px;
+}
+.location-not-found img{
+    width: 80%;
+}
